--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -3,7 +3,7 @@
     <div ngClass="gridHeader bottomBorder">
         <div ngClass="gridHeaderLine">
             <div ngClass="checkboxField">
-                <input type="checkbox" name="selectAll">
+                <input type="checkbox" name="selectAll" (click)="setCheckedAll();">
             </div>
             <div ngClass="gridLogo">
                 &nbsp;
@@ -55,7 +55,7 @@
         <div ngClass="gridLine splitterBottom" *ngFor="let item of content.folders" gridlinechecked="0"
             (contextmenu)="showContextMenu($event,item.type,item.id,false);" (dblclick)="openFolder(item.id)">
             <div ngClass="checkboxField" column="checkbox" style="width: 20px;">
-                <input type="checkbox" (change)="setChecked(item)" name="select"></div>
+                <input type="checkbox" (change)="setChecked(item)" name="select" [checked]="item.checked"></div>
             <div ngClass="gridLogo" column="logo" grid style="width: 30px;">
                 <img src="{{item.logo}}">
             </div>
@@ -94,7 +94,7 @@
         <div ngClass="gridLine splitterBottom" *ngFor="let item of content.files" gridlinechecked="0"
             (contextmenu)="showContextMenu($event,item.type,item.id,false);">
             <div ngClass="checkboxField" column="checkbox" style="width: 20px;">
-                <input type="checkbox" name="select"></div>
+                <input type="checkbox" name="select" [checked]="item.checked" /></div>
             <div ngClass="gridLogo" column="logo" grid style="width: 30px;">
                 <img src="{{item.logo}}">
             </div>
